--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "3.4.8",
     "jade": "*",
     "node-sass": "*",
-    "firebase": "*"
+    "firebase": "*",
+    "sendgrid": "*"
   }
 }
